--- a/src/components/CustomInput/styles.css
+++ b/src/components/CustomInput/styles.css
@@ -1,23 +1,38 @@
-.container label {
-    color: #767676;
-}
-
 .container {
     width: 100%;
     display: flex;
     flex-direction: column;
+    flex-grow: 1;
+    font-size: 16px;
+    /* padding-top: 60px; */
 }
 
-.container input {
+.container:nth-child(odd) {
+    max-width: 330px;
+}
+
+.container:nth-child(even) {
+    max-width: 162px;
+}
+
+.container:only-child {
+    max-width: 100%;
+}
+
+.container > label {
+    color: #767676;
+    font-size: calc(1rem - 2px);
+    line-height: 16px;
+    padding-bottom: 4px;
+}
+
+.container > input {
     border: 2px solid #AAAAAA;
     border-radius: 4px;
     height: 40px;
     width: 100%;
     color: #767676;
+    font-size: 1rem;
+    line-height: 18px;
     padding: 12px 11px 11px;
-}
-
-.container:nth-child(even) {
-    max-width: 162px;
-    margin-left: 24px;
 }
