--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,10 @@
     box-sizing: border-box;
 }
 
-body {
-    display: flex;
-    justify-content: center;
-    background: #F5F5F5;
+@media (min-width: 992px) {
+    body {
+        display: flex;
+        justify-content: center;
+        background: #F5F5F5;
+    }
 }
