--- a/src/App.css
+++ b/src/App.css
@@ -91,7 +91,7 @@ input[type="checkbox"] {
     }
 
     .inputGroup:nth-last-child(2) > div:last-child {
-        margin-top: 10%;
+        margin-top: 1.2em;
     }
 
     .inputGroup:last-child > div {
