--- a/src/pages/Sucess/styles.css
+++ b/src/pages/Sucess/styles.css
@@ -12,7 +12,11 @@
     font-size: 40px;
 }
 
-.content > button {
+.content > a {
+    width: 100%;
+}
+
+.content button {
     cursor: pointer;
     width: 270px;
     height: 177px;
@@ -32,7 +36,7 @@
         justify-content: space-evenly;
     }
 
-    .content > button {
+    .content button {
         width: 100%;
         height: 75px;
     }
