Adicionado controle de rotas, persistencia dos valores dos campos com localstorage, e realizado mais algumas refatoracoes no css

--- a/src/components/CustomInput/styles.css
+++ b/src/components/CustomInput/styles.css
@@ -39,30 +39,27 @@ input[type="checkbox"] {
     accent-color: #0DBDBD;
 }
 
-.container .error {
-    padding-top: 7px;
-    height: 16px;
-}
-
 .container .error > label {
     font-size: 14px;
-}
-
-.container .invalid {
+    line-height: 16px;
     color: #FF4B4B;
 }
 
-.container .valid {
-    color: white;
+.container .invalid {
+    visibility: visible;
 }
 
-@media (min-width: 992px) {
+.container .valid {
+    visibility: hidden;
+}
+
+@media (min-width: 768px) {
     .container:nth-child(odd) {
-        max-width: 330px;
+        max-width: 340px;
     }
 
     .container:nth-child(even) {
-        max-width: 162px;
+        max-width: 180px;
     }
 
     .container:only-child {
