--- a/src/components/Box/styles.css
+++ b/src/components/Box/styles.css
@@ -1,14 +1,14 @@
 .box {
     max-width: 620px;
-    height: 763px;
+    max-height: 763px;
+    height: 92vh;
     background: #FFFFFF;
     border-radius: 20px;
-    margin: 100px;
     display: flex;
     flex-direction: column;
 }
 
-@media (max-width: 992px) {
+@media (max-width: 768px) {
     .box {
         margin: 0;
         border-radius: 0;
