--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -4,16 +4,16 @@ form {
     flex-grow: 1;
     flex-direction: column;
     justify-content: space-around;
-    padding-left: 33px;
-    padding-right: 71px;
-    padding-bottom: 65px;
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-bottom: 20px;
 }
 
 .fields {
     display: flex;
     flex-direction: column;
     flex-grow: 0.5;
-    justify-content: space-around;
+    justify-content: space-evenly;
 
 }
 
@@ -49,10 +49,11 @@ form {
     border: none;
 }
 
-@media (max-width: 992px) {
+@media (max-width: 768px) {
     form {
-        padding-left: 20px;
-        padding-right: 23px;
+        height: 100%;
+        padding-left: 22px;
+        padding-right: 22px;
     }
 
     .fields {
@@ -63,16 +64,13 @@ form {
         flex-wrap: wrap;
     }
 
-    .inputGroup:nth-last-child(2) > div:last-child {
-        margin-top: 1.2em;
-    }
-
     .inputGroup:last-child > div {
         max-width: 49%;
     }
 
     .buttons {
         flex-grow: 0.1;
+        padding: 5px 0;
     }
 
     .buttonGroup {
